--- a/GUI/index-blue-nutshell.html
+++ b/GUI/index-blue-nutshell.html
@@ -240,7 +240,7 @@
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <img src="img/about-side-side.png" alt="About Us Big Image" class="center-block img-responsive">
+                        <img src="img/Image_left.png" alt="About Us Big Image" class="center-block img-responsive">
                     </div>
                     <div class="clearfix"></div>
                 </div>
