--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="caption-content">
                             <h2 class="animated fadeInDown">Billy Okeyo</h2>
                             <span class="animated fadeInDown">Fullstack Web Developer</span>
-                            <a href="GUI/index-blue-nutshell.html" class="btn btn-blue btn-effect">View the GUI </a>
+                            <a href="GUI/index.html" class="btn btn-blue btn-effect">View the GUI </a>
                             <a href="CLI/index.html" class="btn btn-blue btn-effect">View the CLI </a>
                             <br> <br> <br>
                             <p> <i> For More info on what GUI and CLI is Click The Arrow Buttons on far left and far right Or if on Mobile Device, Click on The Small Circles below or swipe</i></p>
@@ -61,7 +61,7 @@
                         <div class="caption-content">
                             <h2>GUI (Graphical User Interface)</h2>
                             <span>Here you view my Portfolio with graphical interface that is with pictures, media etc</span>
-                            <a href="#" class="btn btn-blue btn-effect">View GUI</a>
+                            <a href="GUI/index.html" class="btn btn-blue btn-effect">View GUI</a>
                         </div>
                     </div>
 
@@ -74,7 +74,7 @@
                         <div class="caption-content">
                             <h2>CLI (Command Line Interface)</h2>
                             <span>Here you view my portfolio using the Command Line Interface with no graphical Interface</span>
-                            <a href="#" class="btn btn-blue btn-effect">View CLI</a>
+                            <a href="CLI/index.html" class="btn btn-blue btn-effect">View CLI</a>
                         </div>
                     </div>
 
